force-app/main/default/objects/Student__c/Student__c.object-meta.xml
<CustomObject>
    <description>Tracks student biographical information, contact details, and status for the SAMS project.</description>
    <label>Student</label>
    <nameField>
        <label>Student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>