force-app/main/default/objects/Student__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Student&apos;s current residential address</description>
    <inlineHelpText>Enter the student&apos;s physical address</inlineHelpText>
    <label>Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>