force-app/main/default/objects/Student__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <description>Calculated age based on Date of Birth</description>
    <formula>IF(NOT(ISBLANK(Date_of_Birth__c)), YEAR(TODAY()) - YEAR(Date_of_Birth__c) - IF(OR(MONTH(TODAY()) &lt; MONTH(Date_of_Birth__c), AND(MONTH(TODAY()) == MONTH(Date_of_Birth__c), DAY(TODAY()) &lt; DAY(Date_of_Birth__c))), 1, 0), null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Automatically calculated age based on the student&apos;s DOB</inlineHelpText>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>