force-app/main/default/objects/Student__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Country of residence/origin</description>
    <inlineHelpText>Enter the student&apos;s country of origin</inlineHelpText>
    <label>Country</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>