force-app/main/default/objects/Student__c/fields/Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth__c</fullName>
    <description>Student&apos;s date of birth, used for age calculation.</description>
    <inlineHelpText>Enter the student&apos;s date of birth</inlineHelpText>
    <label>Date of Birth</label>
    <required>true</required>
    <type>Date</type>
</CustomField>