force-app/main/default/objects/Student__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Primary contact email address for the student</description>
    <inlineHelpText>Enter the student&apos;s unique contact email</inlineHelpText>
    <label>Email</label>
    <required>true</required>
    <type>Email</type>
    <unique>true</unique>
</CustomField>