force-app/main/default/objects/Student__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Contact phone number for the student</description>
    <inlineHelpText>Enter the student&apos;s phone number</inlineHelpText>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>