force-app/main/default/objects/Student__c/fields/Student_ID__c.field-meta.xml
<CustomField>
    <fullName>Student_ID__c</fullName>
    <description>Unique system-generated identifier for the student (Format: SAMS-YYYY-XXXX)</description>
    <externalId>true</externalId>
    <inlineHelpText>System-generated Student ID</inlineHelpText>
    <label>Student ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>