force-app/main/default/objects/Student__c/fields/Student_Type__c.field-meta.xml
<CustomField>
    <fullName>Student_Type__c</fullName>
    <description>Classification of the student (Domestic or International)</description>
    <inlineHelpText>Select the student classification</inlineHelpText>
    <label>Student Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Domestic</fullName>
                <default>true</default>
                <label>Domestic</label>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>