force-app/main/default/objects/Student__c/recordTypes/Domestic.recordType-meta.xml
<RecordType>
    <fullName>Domestic</fullName>
    <active>true</active>
    <description>Record type for domestic students residing in the home country.</description>
    <label>Domestic</label>
</RecordType>