force-app/main/default/objects/Student__c/recordTypes/International.recordType-meta.xml
<RecordType>
    <fullName>International</fullName>
    <active>true</active>
    <description>Record type for international students requiring visa and passport tracking.</description>
    <label>International</label>
</RecordType>