force-app/main/default/objects/Student__c/validationRules/Email_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_Validation</fullName>
    <active>true</active>
    <description>Ensures the email address matches standard email format criteria.</description>
    <errorConditionFormula>NOT(REGEX(Email__c, &quot;^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\\.[a-zA-Z]{2,4}$&quot;))</errorConditionFormula>
    <errorDisplayField>Email__c</errorDisplayField>
    <errorMessage>Please enter a valid email address (e.g. name@domain.com).</errorMessage>
</ValidationRule>