force-app/main/default/objects/Student__c/listViews/All_Students.listView-meta.xml
<ListView>
    <fullName>All_Students</fullName>
    <columns>NAME</columns>
    <columns>Student_ID__c</columns>
    <columns>Email__c</columns>
    <columns>Student_Type__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Students</label>
</ListView>